--- a/GIVEUP.html
+++ b/GIVEUP.html
@@ -33,10 +33,7 @@
     </nav>
   </header>
 
-  <iframe width="420" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1" frameborder="0"
-    allowfullscreen style="display:block;
-      margin-left: auto;
-      margin-right: auto"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
   <footer align="center">
