--- a/kontakt.html
+++ b/kontakt.html
@@ -76,6 +76,7 @@
   <form action="/action_page.php" ;"/html/tags/html_form_tag_action.cfm" method="post">
     <div>
       <br>
+      <h2> <u>Chcesz się czegoś dodatkowego dowiedzieć?</u></h2> 
       <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
 Zostaw komentarz!
 </textarea>
