--- a/kontakt.html
+++ b/kontakt.html
@@ -37,24 +37,21 @@
 
   <h2 style="color:red"> <u> Podstawowe dane: </u></h2>
 
-  <form>
+  <form action="https://formspree.io/f/mjvzqpyo" method="post">
     <label for="Imie" style="color:red" align="center"> Imię: </label>
     <input type="text" id="Imie" name="Imie" type="red"><br>
-  </form>
 
   <br>
-
-  <form>
+  
     <label for="Nazwisko" style="color:red"> Nazwisko: </label>
     <input type="text" id="Nazwisko" name="Nazwisko" style="color:white"><br>
   </form>
 
   <br>
-  <form>
+  
     <label for="Karta" style="color:red"> Podaj numer Karty Kredytowej: </label>
     <input for="text" id="Karta" name="Karta"> <br>
 
-  </form>
 
   <h2> <u>Jaka jest twa płeć?</u></h2>
 
@@ -74,7 +71,7 @@
   </select>
 
   <h2> <u>Chcesz się czegoś dodatkowego dowiedzieć?</u></h2> 
-  <form action="/action_page.php" ;"/html/tags/html_form_tag_action.cfm" method="post">
+  <form>
     <div>
       <br>
       <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
