--- a/kontakt.html
+++ b/kontakt.html
@@ -38,14 +38,14 @@
   <h2 style="color:red"> <u> Podstawowe dane: </u></h2>
 
   <form action="https://formspree.io/f/mjvzqpyo" method="post">
+    
     <label for="Imie" style="color:red" align="center"> Imię: </label>
-    <input type="text" id="Imie" name="Imie" type="red"><br>
+    <input type="text" id="Imie" name="Imie"><br>
 
   <br>
   
     <label for="Nazwisko" style="color:red"> Nazwisko: </label>
-    <input type="text" id="Nazwisko" name="Nazwisko" style="color:white"><br>
-  </form>
+    <input type="text" id="Nazwisko" name="Nazwisko"><br>
 
   <br>
   
@@ -71,12 +71,11 @@
   </select>
 
   <h2> <u>Chcesz się czegoś dodatkowego dowiedzieć?</u></h2> 
-  <form>
+    
     <div>
       <br>
-      <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
-Zostaw komentarz!
-</textarea>
+      <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">Zostaw komentarz!
+      </textarea>
     </div>
     <input type="submit" value="Submit">
   </form>
