--- a/GIVEUP.html
+++ b/GIVEUP.html
@@ -33,7 +33,10 @@
     </nav>
   </header>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"> </iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+      display:block;
+      margin-left: auto;
+      margin-right: auto;"> </iframe>
 
 
   <footer align="center">
