--- a/GIVEUP.html
+++ b/GIVEUP.html
@@ -34,8 +34,7 @@
   </header>
 
   <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
-      margin-left: auto;
-      margin-right: auto;"> </iframe>
+      display:block;> </iframe>
 
 
   <footer align="center">
