--- a/GIVEUP.html
+++ b/GIVEUP.html
@@ -33,7 +33,7 @@
     </nav>
   </header>
 
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1"> </iframe>
+   <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1&mute=1"> </iframe>
 
 
   <footer align="center">
